# shell4cpp

./: CMakeLists.txt  LICENSE  README.md
include/shell4cpp/: Operation.hpp  Shell.hpp
test/: CMakeLists.txt  shell_test.cpp
